--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -1,9 +1,9 @@
----
-name: home
-url: /
----
+<div zf-panel id="sub-nav" class="fast bounceInOut medium-10 medium-grid-content align-center">
+<div class="grid-block align-center">
+	<div class="grid-content medium-6">
+<h2> Home </h2>
+<P> Testing Home </P>
 
-<div class="grid-container">
-  <h1>Welcome to Foundation for Apps!</h1>
-  <p class="lead">This is version <strong>1.2 Eiger</strong>.</p>
-</div>
+</div></div>
+</zf-modal>
+<!-- End Compose Message -->
